tests/fixtures/invalid/divmod_dict_float.py
# Cannot call divmod() with Dict[str, int], Float
x = divmod({"a": 1}, 1.0)
